apps/harbor/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: harbor
  namespace: harbor
  labels:
    app.kubernetes.io/name: harbor
    app.kubernetes.io/instance: harbor
spec:
  host: harbor.208.haist.farm
  to:
    kind: Service
    name: harbor
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
